# internal/handler/dto/user_response.go
@@ -1,10 +1,0 @@
-package dto
-
-import "time"
-
-type UserResponse struct {
-	ID        uint      `json:"id"`
-	Name      string    `json:"name"`
-	Email     string    `json:"email"`
-	CreatedAt time.Time `json:"created_at"`
-}
